# smtpdfix

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  daily.yml  scorecards-analysis.yml  scorecards.yml  test.yml
bebleo_smtpd_fixture/: __init__.py  authenticator.py  config.py  controller.py  fixture.py  handlers.py  smtp.py
bebleo_smtpd_fixture/certs/: cert.pem  gen_certs.sh  key.pem  req.cnf
docs/: CHANGELOG.md  SECURITY.md
docs/source/: conf.py  index.rst
requirements/: minimum.requirements.txt  requirements.min.txt  requirements.txt
requirements/latest/: requirements.txt
requirements/minimum/: requirements.txt
smtpdfix/: __init__.py  authenticator.py  certs.py  config.py  configuration.py  controller.py  event_handler.py  fixture.py  handlers.py  lazy.py  smtp.py  typing.py
smtpdfix/certs/: cert.pem  gen_certs.sh  key.pem  req.cnf
smtpdfix/event_handler/: __init__.py
tests/: conftest.py  test_configuration.py  test_controller.py  test_deprecation.py  test_examples.py  test_fixture.py  test_smtp.py  test_smtpd.py  test_smtpdfix.py
tests/assets/: .env  .test.env  test.env
utils/: fix-requirements.sh
