[metadata]
name = smtpdfix
version = attr: smtpdfix.__version__
url = https://github.com/bebleo/smtpdfix
project_urls = 
    Source = https://github.com/bebleo/smtpdfix
    Documentation = https://github.com/bebleo/smtpdfix/blob/main/README.md
    Issues = https://github.com/bebleo/smtpdfix/issues
license = MIT
license_file = LICENSE
author = James Warne
author_email = bebleo@yahoo.com
description = A mock SMTP server designed for use as a test fixture that 
              implements encryption and authentication.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest

[options]
packages = find:
python_requires = >= 3.6

[options.entry_points]
pytest11 =
    smtpd = smtpdfix.fixture

[tools:pytest]
testpaths = tests
log_cli = True

[coverage:run]
branch = True
source = smtpdfix

[flake8]
exclude = env,venv,.tox
