[metadata]
name = smtpdfix
version = attr: smtpdfix.__version__
description = A SMTP server for use as a pytest fixture that implements encryption and authentication for testing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bebleo/smtpdfix
author = James Warne
author_email = bebleo@yahoo.com
license = MIT
license_file = LICENSE
classifiers =
    Framework :: Pytest
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
project_urls =
    Source = https://github.com/bebleo/smtpdfix
    Documentation = https://github.com/bebleo/smtpdfix#readme
    Issues = https://github.com/bebleo/smtpdfix/issues

[options]
packages = find:
install_requires =
    aiosmtpd>=1.3.1,<=1.4.2
    cryptography>=3.4.4
    pytest
    python-dotenv
python_requires = >=3.6

[options.entry_points]
pytest11 =
    smtpd = smtpdfix.fixture

[options.extras_require]
dev =
    flake8
    isort
    pytest-asyncio
    pytest-cov
    pytest-timeout
    tox

[tool:pytest]
testpaths = tests
asyncio_mode = strict

[coverage:run]
branch = True
source = smtpdfix

[flake8]
exclude = env,venv,.tox
