[metadata]
name = smtpdfix
version = attr: smtpdfix.__version__
description = A SMTP server for use as a pytest fixture that implements encryption and authentication for testing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bebleo/smtpdfix
author = James Warne
author_email = bebleo@yahoo.com
license = MIT
license_file = LICENSE
classifiers =
    Framework :: Pytest
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
project_urls =
    Source = https://github.com/bebleo/smtpdfix
    Documentation = https://github.com/bebleo/smtpdfix#readme
    Issues = https://github.com/bebleo/smtpdfix/issues

[options]
packages = find:
include_package_data = True
install_requires =
    aiosmtpd
    cryptography;python_implementation!="PyPy"
    cryptography >= 39.0.1, < 40.0.0;python_implementation=="PyPy"
    portpicker
    pytest
python_requires = >=3.7

[options.entry_points]
pytest11 =
    smtpd = smtpdfix.fixture

[options.extras_require]
dev =
    flake8
    isort
    pytest-asyncio
    pytest-cov
    pytest-timeout
    tox
typing =
    mypy

[options.package_data]
smtpdfix = py.typed

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = smtpdfix

[flake8]
exclude = env,venv,.tox

[mypy]
files = smtpdfix
python_version = 3.7
# show_error_codes = True
# allow_redefinition = True
disallow_any_generics = True
# disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
# disallow_untyped_decorators = True
no_implicit_optional = True
# local_partial_types = True
no_implicit_reexport = True
# strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
warn_return_any = True
# warn_unreachable = True
follow_imports = skip

[mypy-portpicker.*]
ignore_missing_imports = True
